<resources>
    <string name="app_name">TheNewsBay</string>
    <string name="the_news_bay">The News Bay</string>
    <string name="headlines">Headlines</string>
    <string name="technology">Technology</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="tv_article_description">Description</string>
    <string name="tv_article_title">Title</string>
    <string name="tv_article_image">Image</string>
    <string name="tv_article_author">Author</string>
    <string name="tv_article_publishedAt">published at</string>
    <string name="specific_news">Specific News</string>
    <string name="fab_menu">fab_menu</string>
    <string name="nva_save">Save</string>
    <string name="nav_alert">Alert</string>
    <string name="nav_search">Search</string>
    <string name="nav_back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t_search">Search</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--    spinner-->
    <string-array name="countries">
        <item>United State</item>
        <item>Hong Kong</item>
        <item>India</item>
        <item>Japan</item>
        <item>Australia</item>
    </string-array>
</resources>