<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_news.ui.NewsActivity"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/news_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/tv_the_news_bay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="149dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_include"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news_toolbar"
        app:tabTextColor="#358087"
        app:tabSelectedTextColor="#911BB0"
        app:tabIndicatorColor="#3949AB"
        app:tabIndicatorHeight="4dp"
        app:tabMode="scrollable"
        android:backgroundTint="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_headlines"
            android:text="@string/headlines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_technology"
            android:text="@string/technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_business"
            android:text="@string/business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_health"
            android:text="@string/health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_sports"
            android:text="@string/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_entertainment"
            android:text="@string/entertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout_include">

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_menu_24"
        app:fabSize="normal"
        app:backgroundTint="@color/design_default_color_primary"
        app:tint="@color/white"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/fab_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>