<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cv_article_card"
        android:padding="10dp"
        android:layout_margin="2dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_article_image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/tv_article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/oswald_medium"
                android:maxLines="2"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:text="@string/tv_article_title"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_article_image"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:id="@+id/tv_article_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:ellipsize="end"
                android:textSize="16sp"
                android:text="@string/tv_article_description"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_article_title"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_article_description">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <TextView
                        android:id="@+id/tv_article_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:text="@string/tv_article_author"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="@android:color/black"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_article_publishedAt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:text="@string/tv_article_publishedAt"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="@android:color/black"
                        app:layout_constraintTop_toBottomOf="@+id/tv_article_author" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/iv_article_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_save"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/iv_article_share"
                        />

                    <ImageView
                        android:id="@+id/iv_article_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_share"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/iv_article_download"
                        />
                    <ImageView
                        android:id="@+id/iv_article_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_download"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>



            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>